[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # Important for FFI

[dependencies]

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Input_Ime",
]
